@@ -16,6 +16,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #27056: Optimize pickle.load() and pickle.loads(), up to 10% faster
+  to deserialize a lot of small objects.
+
 
 What's New in Python 3.6.0 alpha 1?
 ===================================
@@ -341,7 +344,7 @@ Library
 - Issue #26977: Removed unnecessary, and ignored, call to sum of squares helper
   in statistics.pvariance.
 
-- Issue #26002: Use bisect in statistics.median instead of a linear search. 
+- Issue #26002: Use bisect in statistics.median instead of a linear search.
   Patch by Upendra Kuma.
 
 - Issue #25974: Make use of new Decimal.as_integer_ratio() method in statistics
